crates/musli/tests/ui/untagged_enum_error.stderr
error: `Decode` cannot be implemented on enums which are #[musli(packed)]
 --> tests/ui/untagged_enum_error.rs:4:9
  |
4 | #[musli(packed)]
  |         ^^^^^^
